# MyShell

./: CMakeLists.txt  built_ins.cpp  builtins.cpp  builtins.h  main.cpp  myshell
mybins/: mycat
shell_2/: CMakeLists.txt
